# EstDados

./: CMakeLists.txt  readme.md
.github/workflows/: ci.yml
content/: datasetReduzido.csv  map.xml
dependencies/: CMakeLists.txt
src/: Application.cpp  Application.hpp  AvlTree.hpp  AvlTree.hxx  BinSearchTree.cpp  BinSearchTree.hpp  CircularList.cpp  CircularList.hpp  DecisionTree.cpp  DecisionTree.hpp  Dijkstra.cpp  Dijkstra.hpp  EMSManager.cpp  EMSManager.hpp  LinkedList.cpp  LinkedList.hpp  PriorityList.cpp  PriorityList.hpp  PriorityQueue.cpp  PriorityQueue.hpp  QueueVehicle.cpp  QueueVehicle.hpp  Randomevent.cpp  Stack.cpp  StackVehicle.cpp  StackVehicle.hpp  VehicleManager.cpp  VehicleManager.hpp  graph.cpp  graph.hpp  main.cpp  types.hpp
src/NonWorking/: Queue.cpp  Queue.hpp  QueueVehicle.cpp  QueueVehicle.hpp  Stack.cpp  Stack.hpp
src/VehicleOrdering/: QueueVehicle.hpp  StackVehicle.cpp  StackVehicle.hpp
src/estruturasSimples/: arvore_de_decisao.cpp  fila_com_prioridade.cpp  lista.cpp  listaEncadeada.cpp  pilha.cpp  recursao.cpp  test.cpp
